stateDiagram-v2
    [*] --> pending : INSERT cùng domain transaction
    pending --> claimed : dispatcher claim + lease token
    claimed --> delivered : consumer idempotent ACK
    claimed --> pending : transient fail / sequence gap + backoff
    claimed --> pending : claim lease expired
    claimed --> dead : permanent fail hoặc max_attempts
    dead --> pending : operator replay sau khi sửa nguyên nhân
    delivered --> [*]

    note right of pending
        Có event_id duy nhất,
        aggregate_id + aggregate_seq,
        next_attempt_at và attempt.
    end note

    note right of dead
        Không xóa payload.
        Giữ correlation_id, schema/model versions,
        last_error và audit người replay.
        outbox_dead_total > 0 phải alert.
    end note

